<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.talentjoko.leaveappjsc.ui.dashboard.DashBoardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_check_in_out"
        android:name="com.talentjoko.leaveappjsc.ui.check_in_out.CheckInOutFragment"
        android:label="@string/menu_check_in_out"
        tools:layout="@layout/fragment_check_in_out" />

    <fragment
        android:id="@+id/nav_todo_list"
        android:name="com.talentjoko.leaveappjsc.ui.todolist.TodoListFragment"
        android:label="@string/menu_todo_list"
        tools:layout="@layout/fragment_todolist" />
</navigation>